cf_analysis_results/checkerframework_3.42.0_results/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8.txt
../dataset/june2020_dataset/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/ft2client.java:14: error: (required.method.not.called) $$ 4 $$ method close $$ s $$ java.net.Socket $$ possible exceptional exit due to dis.readLine() with exception type java.io.IOException $$ ( 337, 367 ) $$ @MustCall method close may not have been invoked on s or any of its aliases.
                 s=new Socket("127.0.0.1",8081);
                  ^
  The type of object is: java.net.Socket.
  Reason for going out of scope: possible exceptional exit due to dis.readLine() with exception type java.io.IOException
../dataset/june2020_dataset/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/ft2client.java:28: error: (required.method.not.called) $$ 4 $$ method close $$ fs $$ java.io.FileOutputStream $$ possible exceptional exit due to get.readLine() with exception type java.io.IOException $$ ( 921, 967 ) $$ @MustCall method close may not have been invoked on fs or any of its aliases.
             FileOutputStream  fs=new FileOutputStream(f1);
                               ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: possible exceptional exit due to get.readLine() with exception type java.io.IOException
../dataset/june2020_dataset/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/Peer.java:33: error: (required.method.not.called) $$ 4 $$ method close $$ new MulticastSocket(port) $$ java.net.MulticastSocket $$ possible exceptional exit due to socket.setTimeToLive(5) with exception type java.io.IOException $$ ( 832, 857 ) $$ @MustCall method close may not have been invoked on new MulticastSocket(port) or any of its aliases.
		socket = new MulticastSocket(port);
		         ^
  The type of object is: java.net.MulticastSocket.
  Reason for going out of scope: possible exceptional exit due to socket.setTimeToLive(5) with exception type java.io.IOException
../dataset/june2020_dataset/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/ft2server.java:10: error: (required.method.not.called) $$ 4 $$ method close $$ ss $$ java.net.ServerSocket $$ possible exceptional exit due to cs.getOutputStream() with exception type java.io.IOException $$ ( 196, 221 ) $$ @MustCall method close may not have been invoked on ss or any of its aliases.
            ss=new ServerSocket(8081);
              ^
  The type of object is: java.net.ServerSocket.
  Reason for going out of scope: possible exceptional exit due to cs.getOutputStream() with exception type java.io.IOException
../dataset/june2020_dataset/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/ft2server.java:20: error: (required.method.not.called) $$ 4 $$ method close $$ cs $$ java.net.Socket $$ possible exceptional exit due to cs.getOutputStream() with exception type java.io.IOException $$ ( 431, 445 ) $$ @MustCall method close may not have been invoked on cs or any of its aliases.
            cs=ss.accept();
              ^
  The type of object is: java.net.Socket.
  Reason for going out of scope: possible exceptional exit due to cs.getOutputStream() with exception type java.io.IOException
../dataset/june2020_dataset/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/ft2server.java:37: error: (required.method.not.called) $$ 4 $$ method close $$ fstream $$ java.io.FileReader $$ possible exceptional exit due to new FileReader(s) with exception type java.io.FileNotFoundException $$ ( 1016, 1055 ) $$ @MustCall method close may not have been invoked on fstream or any of its aliases.
        	FileReader fstream = new FileReader(s);
        	           ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to new FileReader(s) with exception type java.io.FileNotFoundException
../dataset/june2020_dataset/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/ft2server.java:41: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(s) $$ java.io.FileReader $$ possible exceptional exit due to d.readLine() with exception type java.io.IOException $$ ( 1193, 1210 ) $$ @MustCall method close may not have been invoked on new FileReader(s) or any of its aliases.
            BufferedReader d=new BufferedReader(new FileReader(s));
                                                ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to d.readLine() with exception type java.io.IOException
../dataset/june2020_dataset/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/middleware/ReliableMulticast.java:51: error: (required.method.not.called) $$ 4 $$ method close $$ socket $$ java.net.MulticastSocket $$ possible exceptional exit due to socket.setTimeToLive(5) with exception type java.io.IOException $$ ( 1344, 1395 ) $$ @MustCall method close may not have been invoked on socket or any of its aliases.
			MulticastSocket socket = new MulticastSocket(port);
			                ^
  The type of object is: java.net.MulticastSocket.
  Reason for going out of scope: possible exceptional exit due to socket.setTimeToLive(5) with exception type java.io.IOException
../dataset/june2020_dataset/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/middleware/Sender.java:51: error: (required.method.not.called) $$ 4 $$ method close $$ group.getSocket() $$ java.net.MulticastSocket $$ regular method exit $$ ( 1487, 1504 ) $$ @MustCall method close may not have been invoked on group.getSocket() or any of its aliases.
						group.getSocket().send(outgoingPacket);
						               ^
  The type of object is: java.net.MulticastSocket.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/middleware/Listener.java:31: error: (required.method.not.called) $$ 4 $$ method close $$ group.getSocket() $$ java.net.MulticastSocket $$ regular method exit $$ ( 716, 733 ) $$ @MustCall method close may not have been invoked on group.getSocket() or any of its aliases.
						group.getSocket().receive(incoming);
						               ^
  The type of object is: java.net.MulticastSocket.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/Filelist.java:42: error: (required.method.not.called) $$ 4 $$ method close $$ file $$ java.io.InputStream $$ possible exceptional exit due to new ObjectInputStream(buffer) with exception type java.io.IOException $$ ( 1212, 1312 ) $$ @MustCall method close may not have been invoked on file or any of its aliases.
			InputStream file = new FileInputStream(path
			            ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectInputStream(buffer) with exception type java.io.IOException
../dataset/june2020_dataset/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/FileServer.java:42: error: (required.method.not.called) $$ 4 $$ method close $$ s $$ java.net.Socket $$ regular method exit $$ ( 1217, 1250 ) $$ @MustCall method close may not have been invoked on s or any of its aliases.
					final Socket s = server.accept();
					             ^
  The type of object is: java.net.Socket.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/FileServer.java:79: error: (required.method.not.called) $$ 4 $$ method close $$ new FileInputStream(myFile) $$ java.io.FileInputStream $$ possible exceptional exit due to bis.read(mybytearray, 0, mybytearray.length) with exception type java.io.IOException $$ ( 2190, 2217 ) $$ @MustCall method close may not have been invoked on new FileInputStream(myFile) or any of its aliases.
						new FileInputStream(myFile));
						^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to bis.read(mybytearray, 0, mybytearray.length) with exception type java.io.IOException
../dataset/june2020_dataset/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/logic/filesystem/FileRequestTask.java:73: error: (required.method.not.called) $$ 4 $$ method close $$ fos $$ java.io.FileOutputStream $$ possible exceptional exit due to is.read(mybytearray, 0, mybytearray.length) with exception type java.io.IOException $$ ( 1959, 2013 ) $$ @MustCall method close may not have been invoked on fos or any of its aliases.
			FileOutputStream fos = new FileOutputStream(tempFile);
			                 ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: possible exceptional exit due to is.read(mybytearray, 0, mybytearray.length) with exception type java.io.IOException
../dataset/june2020_dataset/urla958522fc1_spirosikmd_inmdsy_08_tgz-pJ8-TesterAppJ8/src/nl/rug/peerbox/ui/LogView.java:61: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(logFile) $$ java.io.FileReader $$ possible exceptional exit due to reader.readLine() with exception type java.io.IOException $$ ( 1931, 1954 ) $$ @MustCall method close may not have been invoked on new FileReader(logFile) or any of its aliases.
			BufferedReader reader = new BufferedReader(new FileReader(logFile));
			                                           ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to reader.readLine() with exception type java.io.IOException
15 errors
